# cmake_minimum_required(VERSION <specify CMake version here>)
project(untitled)

set(CMAKE_CXX_STANDARD 17)

add_executable(untitled Puuttuva.cpp Spiraali.cpp Ratsut.cpp Kertoma.cpp Ravintola.cpp Testi.cpp IncreasingArray.cpp Permutations.cpp Apartments.cpp Arrays.cpp StringStream.cpp Mittaukset.cpp)